--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <title>Landing Page</title>
 </head>
 <body>
+    <header>
+        <div class="header-logo">
+            <p>Header Logo</p>
+        </div>
+        <div class="header-links">
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
+    </header>
+
+    <main>
+        <div class="splash">
+            <h1>This website is awesome</h1>
+            <p>Dolore velit consectetur tempor esse non excepteur aute dolor consequat. Cupidatat consectetur aliqua tempor fugiat exercitation magna elit fugiat ullamco.</p>
+            <img src="images/hero-image.jpg" alt="thicket of berries in a field">
+        </div>
+
+    </main>
     
     <footer>
         <a href="https://www.flaticon.com/free-icons/odin" title="odin icons">Odin icons created by Freepik - Flaticon</a>
