Fully style section 1

--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
 
     <main>
         <div class="splash">
-            <h1>This website is awesome</h1>
-            <p>Dolore velit consectetur tempor esse non excepteur aute dolor consequat. Cupidatat consectetur aliqua tempor fugiat exercitation magna elit fugiat ullamco.</p>
-            <img src="images/hero-image.jpg" alt="thicket of berries in a field">
+            <div class="splash-text">
+                <h1>This website is awesome</h1>
+                <p>Dolore velit consectetur tempor esse non excepteur aute dolor consequat. Cupidatat consectetur aliqua tempor fugiat exercitation magna elit fugiat ullamco.</p>
+                <button>Sign Up</button>
+            </div>
+            <div class="splash-image">
+                <img src="images/hero-image.jpg" alt="thicket of berries in a field">
+            </div>
         </div>
 
     </main>
