Add html for info block

--- a/index.html
+++ b/index.html
@@ -33,6 +33,28 @@
             </div>
         </div>
 
+        <div class="info-section">
+            <h2>Some random information.</h2>
+            <div class="info-blocks">
+                <div class="info-block">
+                    <img src="images/bird-one.jpg" alt="blue bird in tree" class="info-image">
+                    <p class="subtext">this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info-block">
+                    <img src="images/bird-two.jpg" alt="brown bird on branch" class="info-image">
+                    <p class="subtext">this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info-block">
+                    <img src="images/bird-three.jpg" alt="brown bird" class="info-image">
+                    <p class="subtext">this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info-block">
+                    <img src="images/bird-four.jpg" alt="blue bird singing" class="info-image">
+                    <p class="subtext">this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
+
     </main>
     
     <footer>
