Add html for quote

--- a/index.html
+++ b/index.html
@@ -47,9 +47,17 @@
                 <div class="info-block">
                     <img src="images/bird-three.jpg" alt="brown bird" class="info-image">
                     <p class="subtext">this is some subtext under an illustration or image</p>
-                </div>
-               
+                </div>     
             </div>
+        </div>
+
+        <div class="quote-section">
+            <blockquote cite="https://www.huley.net/bnw/four.html">
+                <p>
+                    Words can be like X-rays, if you use them properly&ndash;they&apos;ll go through anything. You read and you&apos;re pierced. 
+                </p>
+            </blockquote>
+            <p>&ndash;Aldous Juxley, <cite>Brave New World</cite></p>
         </div>
 
     </main>
