Style quote section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     Words can be like X-rays, if you use them properly&ndash;they&apos;ll go through anything. You read and you&apos;re pierced. 
                 </p>
             </blockquote>
-            <p>&ndash;Aldous Juxley, <cite>Brave New World</cite></p>
+            <p class="citation">&ndash;Aldous Juxley, <cite>Brave New World</cite></p>
         </div>
 
     </main>
