Add html for CTA section

--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
             <p class="citation">&ndash;Aldous Juxley, <cite>Brave New World</cite></p>
         </div>
 
+        <div class="CTA-section">
+            <div class="CTA-block">
+                <h3 class="CTA-header">Call to action! It&amp;s time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+                <button>Sign up</button>
+            </div>
+        </div>
+
     </main>
     
     <footer>
