--- a/index.html
+++ b/index.html
@@ -62,9 +62,13 @@
 
         <div class="CTA-section">
             <div class="CTA-block">
-                <h3 class="CTA-header">Call to action! It&amp;s time!</h3>
-                <p>Sign up for our product by clicking that button right over there!</p>
-                <button>Sign up</button>
+                <div class="CTA-text">
+                    <h3 class="CTA-header">Call to action! It&apos;s time!</h3>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="CTA-button">
+                    <button>Sign up</button>
+                </div>
             </div>
         </div>
 
